--- a/src/styles/customModal.css
+++ b/src/styles/customModal.css
@@ -25,20 +25,28 @@ body.react-confirm-alert-body-element {
   -ms-align-items: center;
   align-items: center;
   opacity: 0;
-  -webkit-animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
-  -moz-animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
-  -o-animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
-  animation: react-confirm-alert-fadeIn 0.5s 0.2s forwards;
+  -webkit-animation: react-confirm-alert-fadeIn 0.2s 0.1s forwards;
+  -moz-animation: react-confirm-alert-fadeIn 0.2s 0.1s forwards;
+  -o-animation: react-confirm-alert-fadeIn 0.2s 0.1s forwards;
+  animation: react-confirm-alert-fadeIn 0.2s 0.1s forwards;
 }
 
 .react-confirm-alert-body {
   font-family: Arial, Helvetica, sans-serif;
-  width: 500px;
+
+  max-width: 460px;
   padding: 30px;
   text-align: left;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
+  word-wrap: break-word;
+}
+@media (max-width: 767px) {
+  .react-confirm-alert-body {
+    max-width: 350px;
+    word-wrap: break-word;
+  }
 }
 
 .react-confirm-alert-svg {
